# offset_resolver

./: .gitignore  README.md  install.bat  pymspdb.pyd  requirements.txt  resolve_structs.py
extract_length_lib/: Cargo.toml  Makefile  example.py  out.txt
extract_length_lib/src/: lib.rs
