[package]
name = "extract_length"
version = "0.1.0"
authors = ["Guy Sudai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pymspdb"
crate-type = ["cdylib"]

[dependencies]
pdb = "0.6.0"
fallible-iterator = "0.2.0"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]